Finish login saving / loading. Rework login queue to make it a scheduled thread pool task to make it faster.

--- a/net/build.gradle
+++ b/net/build.gradle
@@ -2,5 +2,5 @@ plugins {}
 
 dependencies {
     implementation project(':api')
-    implementation project(':engine:util')
+    implementation project(':util')
 }
