--- a/engine/build.gradle
+++ b/engine/build.gradle
@@ -11,7 +11,7 @@ run {
 
 dependencies {
     compile project(':api')
-    compile project(':engine:net')
-    compile project(':engine:util')
+    compile project(':net')
+    compile project(':util')
     compile "org.jetbrains.kotlin:kotlin-reflect:1.3.21"
 }
