--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'org.jetbrains.dokka' version '0.9.18'
 }
 
+dependencies {
+    implementation project(':util')
+}
+
 dokka {
     moduleName = 'api'
     outputFormat = 'javadoc'
