--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: java
+install: true
 
-jdk:
-  - oraclejdk8
+os: linux
+dist: xenial
+jdk: oraclejdk8
+
+script:
+  - ./gradlew build --scan -s
