--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ os: linux
 dist: xenial
 jdk: openjdk8
 
-script:
-  - chmod +x gradlew
-
 jobs:
   include:
     - stage: build
+      script: chmod +x gradlew
       script: ./gradlew build
