--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: java
-install: true
-
-os: linux
-dist: xenial
 jdk: openjdk8
+os: linux
 
-jobs:
-  include:
-    - stage: build
-      script: chmod +x gradlew
-      script: ./gradlew build
+branches:
+  only:
+    - master
+
+cache:
+  directories:
+  - $HOME/.gradle
+
+script:
+  - ./gradlew build
