--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ cache:
   directories:
   - $HOME/.gradle
 
-before_script: - chmod +x gradlew
+before_script:
+  - chmod +x gradlew
 
 script:
   - ./gradlew build
