--- a/engine/build.gradle
+++ b/engine/build.gradle
@@ -10,6 +10,7 @@ run {
 }
 
 dependencies {
+    api project(':api')
     compile project(':util')
     compile "org.jetbrains.kotlin:kotlin-reflect:1.3.21"
 }
