--- a/engine/build.gradle
+++ b/engine/build.gradle
@@ -1,7 +1,9 @@
 plugins {
+    id "com.github.johnrengelman.shadow" version "5.1.0"
 }
 
 apply plugin: 'application'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 mainClassName = 'io.rsbox.engine.Launcher'
 
@@ -12,5 +14,11 @@ run {
 dependencies {
     api project(':api')
     compile project(':util')
-    compile "org.jetbrains.kotlin:kotlin-reflect:1.3.21"
+    compile "org.jetbrains.kotlin:kotlin-reflect:1.3.21" 
+}
+
+shadowJar {
+    version = ""
+    classifier = null
+    baseName = "rsbox-server"
 }
