Worked on network protocol reader.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -8,6 +8,10 @@ apply plugin: 'application'
 description = 'RSBox Server'
 mainClassName = 'io.rsbox.server.Launcher'
 
+dependencies {
+    compile project(':server:net')
+}
+
 run {
     workingDir = rootProject.projectDir
 }
