--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,21 +1,13 @@
 plugins {}
 
-group 'rsbox'
-version '1.0'
-
 apply plugin: 'application'
 
-description = 'RSBox Server'
 mainClassName = 'io.rsbox.server.Launcher'
-
-dependencies {
-    compile project(':server:net')
-}
 
 run {
     workingDir = rootProject.projectDir
 }
 
-configure(run) {
-    group = 'server'
+dependencies {
+    compile project(':net')
 }
