--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,3 +2,14 @@ plugins {}
 
 group 'rsbox'
 version '0.1-ALPHA'
+
+dependencies {
+    compile "org.slf4j:slf4j-api:$slf4jVersion"
+    compile "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion"
+    compile "io.github.microutils:kotlin-logging:$kloggingVersion"
+    compile 'com.uchuhimo:konf:0.13.3'
+}
+
+jar {
+    archiveName = 'rsbox-api.jar'
+}
