--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,4 +1,6 @@
-plugins {}
+plugins {
+    id "org.flywaydb.flyway" version "5.2.4"
+}
 
 apply plugin: 'application'
 
@@ -16,4 +18,6 @@ dependencies {
     compile "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion"
     compile "io.github.microutils:kotlin-logging:$kloggingVersion"
     compile 'com.uchuhimo:konf:0.13.3'
+    compile "org.flywaydb:flyway-core:5.2.4"
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.17'
 }
